fixes a few bugs with scale on mobile design

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -247,8 +247,8 @@ body
 
         @media only screen and (max-width: 500px)
             {
-                max-width: 24em;
-                margin-left: 5em
+                max-width: 13em;
+                // margin-left: 5em
             }
 
         
@@ -258,6 +258,7 @@ body
                 @media only screen and (max-width: 500px)
                     {
                         margin-top: 6em;
+                        width: 13em;
                     }
             
         
@@ -286,8 +287,8 @@ body
 
             @media only screen and (max-width: 500px)
                 {
-                    width: 19rem;
-                    font-size: 3em;
+                    width: 15rem;
+                    font-size: 2.4em;
                 }
             }
         h3
@@ -300,7 +301,7 @@ body
 
                 @media only screen and (max-width: 500px)
                     {
-                        font-size: 1.2rem;
+                        font-size: 1rem;
                         width: 17em;
                     }
             }
@@ -318,7 +319,7 @@ body
                 @media only screen and (max-width: 500px)
                     {
                         font-size: 1em;
-                        width: 24rem;
+                        width: 16rem;
                     }
 
             }
@@ -331,7 +332,7 @@ body
 
             @media only screen and (max-width: 500px)
                 {
-                    width: 24rem;
+                    width: 13rem;
                 }
         
 
@@ -346,7 +347,7 @@ body
 
                     @media only screen and (max-width: 500px)
                         {
-                            width: 20rem;
+                            width: 7rem;
                             font-size: 2em;
                         }
 
@@ -365,7 +366,7 @@ body
 
                     @media only screen and (max-width: 500px) 
                         {
-                            width: 24rem;
+                            width: 17rem;
                         }
                 }
 
@@ -392,7 +393,14 @@ body
                     .lessLogo
                         {filter: invert(70%) sepia(1%) saturate(3091%) hue-rotate(297deg) brightness(147%) contrast(129%);}
                     img
-                        {width: 55px;}
+                        {
+                            width: 55px;
+
+                            @media only screen and (max-width: 500px)
+                                {
+                                    width: 35px;
+                                }
+                        }
 
         }
 
@@ -464,7 +472,7 @@ body
 
             @media only screen and (max-width: 500px)
                 { 
-                    width: 24rem;
+                    width: 13rem;
                 }
         
 
@@ -480,7 +488,7 @@ body
                 @media only screen and (max-width: 500px)
                     {
                         font-size: 2em;
-                        width: 24rem;
+                        width: 13rem;
                     }
             }
 
@@ -491,7 +499,7 @@ body
 
                 @media only screen and (max-width: 500px)
                     {
-                        width: 24em;
+                        width: 17em;
                     }
             
 
@@ -521,6 +529,11 @@ body
                         font-size: 1.4rem;
                         line-height: 1.8rem;
                         font-family: 'Roboto', sans-serif;
+
+                        @media only screen and (max-width: 500px)
+                            {
+                                font-size: 1.2rem;
+                            }
                     }
                 }
         
@@ -531,7 +544,7 @@ body
 
                 @media only screen and (max-width: 500px)
                     {
-                        width: 17em;
+                        width: 12em;
                     }
             
             
@@ -580,7 +593,7 @@ body
 
                     @media only screen and (max-width: 500px)
                         {
-                            width: 24rem;
+                            width: 16rem;
                         }
                     }
                 }
@@ -639,7 +652,7 @@ body
 
         @media only screen and (max-width: 500px)
             {
-                width: 23rem;
+                width: 17rem;
             }
 
         h1
@@ -655,7 +668,7 @@ body
                     {
                         margin-top: 1em;
                         font-size: 2em;
-                        width: 24rem;
+                        width: 8rem;
                     }
             }
 
@@ -673,6 +686,11 @@ body
                     border-radius: 17px;
                     height: 3em;
                     padding-left: 0.5em;
+
+                    @media only screen and (max-width: 500px)
+                        {
+                            font-size: 1.2em;
+                        }
                 }
 
             textarea
@@ -682,6 +700,11 @@ body
                     padding-left: .5em;
                     padding-top: .5em;
                     font-family: 'Roboto';
+
+                    @media only screen and (max-width: 500px)
+                        {
+                            font-size: 1.2em;
+                        }
                 }
 
             button
@@ -700,6 +723,11 @@ body
                     @media only screen and (max-width: 500px)
                         {
                             width: 50%;
+
+                            @media only screen and (max-width: 500px)
+                                {
+                                    width: 64%;
+                                }
                         }
                 }
             }
